--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,19 +1,25 @@
 {
   "dependencies": {
-    "com.fallingsnowinteractive.gameplay": "https://github.com/Falling-Snow-Interactive/fsi.gameplay.git",
-    "com.fallingsnowinteractive.library": "https://github.com/Falling-Snow-Interactive/fsi.library.git",
-    "com.fallingsnowinteractive.prototyping": "https://github.com/Falling-Snow-Interactive/fsi.prototyping.git",
-    "com.fallingsnowinteractive.spline": "https://github.com/Falling-Snow-Interactive/fsi.spline.git",
-    "com.fallingsnowinteractive.statemachine": "https://github.com/Falling-Snow-Interactive/Fsi.StateMachine.git",
-    "com.fallingsnowinteractive.trackpad": "https://github.com/Falling-Snow-Interactive/fsi.trackpad.git",
+    "com.fallingsnowinteractive.attributesystem": "file:/Users/kiradinan/Projects/_Packages/fsi.attributesystem",
+    "com.fallingsnowinteractive.currencies": "file:/Users/kiradinan/Projects/_Packages/fsi.currencies",
+    "com.fallingsnowinteractive.gameplay": "file:/Users/kiradinan/Projects/_Packages/fsi.gameplay",
+    "com.fallingsnowinteractive.library": "file:/Users/kiradinan/Projects/_Packages/fsi.library",
+    "com.fallingsnowinteractive.nodemap": "file:/Users/kiradinan/Projects/_Packages/fsi.nodemap",
+    "com.fallingsnowinteractive.prototyping": "file:/Users/kiradinan/Projects/_Packages/fsi.prototyping",
+    "com.fallingsnowinteractive.rectgrid": "file:/Users/kiradinan/Projects/_Packages/fsi.squaregrid",
+    "com.fallingsnowinteractive.settings": "file:/Users/kiradinan/Projects/_Packages/fsi.settings",
+    "com.fallingsnowinteractive.spline": "file:/Users/kiradinan/Projects/_Packages/fsi.spline",
+    "com.fallingsnowinteractive.statemachine": "file:/Users/kiradinan/Projects/_Packages/Fsi.StateMachine",
+    "com.fallingsnowinteractive.trackpad": "file:/Users/kiradinan/Projects/_Packages/fsi.trackpad",
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ai.navigation": "2.0.5",
     "com.unity.cinemachine": "3.1.2",
     "com.unity.collab-proxy": "2.6.0",
     "com.unity.ide.rider": "3.0.34",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.11.2",
-    "com.unity.localization": "1.5.4",
+    "com.unity.localization": "1.5.3",
     "com.unity.probuilder": "6.0.4",
     "com.unity.recorder": "5.1.2",
     "com.unity.render-pipelines.universal": "17.0.3",
