--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,16 +1,16 @@
 {
   "dependencies": {
-      "com.fallingsnowinteractive.attributesystem": "https://github.com/Falling-Snow-Interactive/fsi.attributesystem.git",
-      "com.fallingsnowinteractive.currencies": "https://github.com/Falling-Snow-Interactive/fsi.currencies.git",
-      "com.fallingsnowinteractive.gameplay": "https://github.com/Falling-Snow-Interactive/fsi.gameplay.git",
-      "com.fallingsnowinteractive.library": "https://github.com/Falling-Snow-Interactive/fsi.library.git",
-      "com.fallingsnowinteractive.nodemap": "https://github.com/Falling-Snow-Interactive/fsi.nodemap.git",
-      "com.fallingsnowinteractive.prototyping": "https://github.com/Falling-Snow-Interactive/fsi.prototyping.git",
-      "com.fallingsnowinteractive.rectgrid": "https://github.com/Falling-Snow-Interactive/fsi.squaregrid.git",
-      "com.fallingsnowinteractive.settings": "https://github.com/Falling-Snow-Interactive/fsi.settings.git",
-      "com.fallingsnowinteractive.spline": "https://github.com/Falling-Snow-Interactive/fsi.spline.git",
-      "com.fallingsnowinteractive.statemachine": "https://github.com/Falling-Snow-Interactive/Fsi.StateMachine.git",
-      "com.fallingsnowinteractive.trackpad": "https://github.com/Falling-Snow-Interactive/fsi.trackpad.git",
+    "com.fallingsnowinteractive.attributesystem": "https://github.com/Falling-Snow-Interactive/fsi.attributesystem.git",
+    "com.fallingsnowinteractive.currencies": "https://github.com/Falling-Snow-Interactive/fsi.currencies.git",
+    "com.fallingsnowinteractive.gameplay": "https://github.com/Falling-Snow-Interactive/fsi.gameplay.git",
+    "com.fallingsnowinteractive.library": "https://github.com/Falling-Snow-Interactive/fsi.library.git",
+    "com.fallingsnowinteractive.nodemap": "https://github.com/Falling-Snow-Interactive/fsi.nodemap.git",
+    "com.fallingsnowinteractive.prototyping": "https://github.com/Falling-Snow-Interactive/fsi.prototyping.git",
+    "com.fallingsnowinteractive.rectgrid": "https://github.com/Falling-Snow-Interactive/fsi.squaregrid.git",
+    "com.fallingsnowinteractive.settings": "file:/Users/kiradinan/Projects/_Packages/fsi.settings",
+    "com.fallingsnowinteractive.spline": "https://github.com/Falling-Snow-Interactive/fsi.spline.git",
+    "com.fallingsnowinteractive.statemachine": "https://github.com/Falling-Snow-Interactive/Fsi.StateMachine.git",
+    "com.fallingsnowinteractive.trackpad": "https://github.com/Falling-Snow-Interactive/fsi.trackpad.git",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ai.navigation": "2.0.5",
