--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,14 +7,14 @@
     "com.fallingsnowinteractive.nodemap": "https://github.com/Falling-Snow-Interactive/fsi.nodemap.git",
     "com.fallingsnowinteractive.prototyping": "https://github.com/Falling-Snow-Interactive/fsi.prototyping.git",
     "com.fallingsnowinteractive.rectgrid": "https://github.com/Falling-Snow-Interactive/fsi.squaregrid.git",
-    "com.fallingsnowinteractive.settings": "file:/Users/kiradinan/Projects/_Packages/fsi.settings",
+    "com.fallingsnowinteractive.settings": "https://github.com/Falling-Snow-Interactive/fsi.settings.git",
     "com.fallingsnowinteractive.spline": "https://github.com/Falling-Snow-Interactive/fsi.spline.git",
     "com.fallingsnowinteractive.statemachine": "https://github.com/Falling-Snow-Interactive/Fsi.StateMachine.git",
     "com.fallingsnowinteractive.trackpad": "https://github.com/Falling-Snow-Interactive/fsi.trackpad.git",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ai.navigation": "2.0.5",
-    "com.unity.cinemachine": "3.1.2",
+    "com.unity.cinemachine": "3.1.3",
     "com.unity.collab-proxy": "2.6.0",
     "com.unity.ide.rider": "3.0.34",
     "com.unity.ide.visualstudio": "2.0.22",
