--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,7 +5,7 @@
     "com.fallingsnowinteractive.gameplay": "https://github.com/Falling-Snow-Interactive/fsi.gameplay.git",
     "com.fallingsnowinteractive.library": "https://github.com/Falling-Snow-Interactive/fsi.library.git",
     "com.fallingsnowinteractive.nodemap": "https://github.com/Falling-Snow-Interactive/fsi.nodemap.git",
-    "com.fallingsnowinteractive.prototyping": "https://github.com/Falling-Snow-Interactive/fsi.prototyping.git",
+    "com.fallingsnowinteractive.prototyping": "file:/Users/kiradinan/Projects/_Packages/fsi.prototyping",
     "com.fallingsnowinteractive.rectgrid": "https://github.com/Falling-Snow-Interactive/fsi.squaregrid.git",
     "com.fallingsnowinteractive.settings": "https://github.com/Falling-Snow-Interactive/fsi.settings.git",
     "com.fallingsnowinteractive.spline": "https://github.com/Falling-Snow-Interactive/fsi.spline.git",
@@ -20,11 +20,12 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.11.2",
     "com.unity.localization": "1.5.3",
+    "com.unity.polybrush": "1.1.8",
     "com.unity.probuilder": "6.0.4",
     "com.unity.recorder": "5.1.2",
     "com.unity.render-pipelines.universal": "17.0.3",
     "com.unity.test-framework": "1.4.5",
-    "com.unity.timeline": "1.8.7",
+    "com.unity.timeline": "1.8.8",
     "com.unity.toolchain.macos-arm64-linux-x86_64": "2.0.4",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualeffectgraph": "17.0.3",
