--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.fallingsnowinteractive.nodemap": "https://github.com/Falling-Snow-Interactive/fsi.nodemap.git",
     "com.fallingsnowinteractive.prototyping": "file:/Users/kiradinan/Projects/_Packages/fsi.prototyping",
     "com.fallingsnowinteractive.rectgrid": "https://github.com/Falling-Snow-Interactive/fsi.squaregrid.git",
+    "com.fallingsnowinteractive.roguelite": "file:/Users/kiradinan/Projects/_Packages/fsi.roguelite",
     "com.fallingsnowinteractive.settings": "https://github.com/Falling-Snow-Interactive/fsi.settings.git",
     "com.fallingsnowinteractive.spline": "https://github.com/Falling-Snow-Interactive/fsi.spline.git",
     "com.fallingsnowinteractive.statemachine": "https://github.com/Falling-Snow-Interactive/Fsi.StateMachine.git",
