Nice transitions. Better use of game controller for scene management

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "com.fallingsnowinteractive.attributesystem": "https://github.com/Falling-Snow-Interactive/fsi.attributesystem.git",
     "com.fallingsnowinteractive.currencies": "file:/Users/kiradinan/Projects/_Packages/fsi.currencies",
-    "com.fallingsnowinteractive.gameplay": "https://github.com/Falling-Snow-Interactive/fsi.gameplay.git",
+    "com.fallingsnowinteractive.gameplay": "file:/Users/kiradinan/Projects/_Packages/fsi.gameplay",
     "com.fallingsnowinteractive.library": "https://github.com/Falling-Snow-Interactive/fsi.library.git",
     "com.fallingsnowinteractive.nodemap": "https://github.com/Falling-Snow-Interactive/fsi.nodemap.git",
     "com.fallingsnowinteractive.prototyping": "file:/Users/kiradinan/Projects/_Packages/fsi.prototyping",
