--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@
 .vs/
 
 # No need for the idea folder.
-/.idea/
+.idea/
 
 # Gradle cache directory
 .gradle/
@@ -93,5 +93,5 @@ crashlytics-build.properties
 # If the source bank files are kept outside of the StreamingAssets folder then these can be ignored.
 # Log files can be ignored.
 fmod_editor.log
-/.idea
-.idea/.idea.Fantazee/.idea/workspace.xml
+
+mono_crash.*
