--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,7 +4,7 @@
     "com.fallingsnowinteractive.currencies": "https://github.com/Falling-Snow-Interactive/fsi.currencies.git",
     "com.fallingsnowinteractive.gameplay": "https://github.com/Falling-Snow-Interactive/fsi.gameplay.git",
     "com.fallingsnowinteractive.nodemap": "https://github.com/Falling-Snow-Interactive/fsi.nodemap.git",
-    "com.fallingsnowinteractive.prototyping": "file:/Users/kiradinan/Projects/_Packages/fsi.prototyping",
+    "com.fallingsnowinteractive.prototyping": "https://github.com/Falling-Snow-Interactive/fsi.prototyping.git",
     "com.fallingsnowinteractive.rectgrid": "https://github.com/Falling-Snow-Interactive/fsi.squaregrid.git",
     "com.fallingsnowinteractive.roguelite": "https://github.com/Falling-Snow-Interactive/fsi.roguelite.git",
     "com.fallingsnowinteractive.settings": "https://github.com/Falling-Snow-Interactive/fsi.settings.git",
